--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "@ijstech/cli": "^0.1.26",
     "@ijstech/compiler": "^0.1.18",
     "@ijstech/components": "^0.1.29",
-    "@scom/scom-chart-data-source-setup": "https://github.com/scom-repos/scom-chart-data-source-setup"
+    "@scom/scom-chart-data-source-setup": "^0.1.0"
   }
 }
